tests/js_error/source_locations/class/static_initializer/call.exp
Error: 
  ┌ source_locations/class/static_initializer/call.js:4:11
  |
4 |     throw new Error();
  |           ^
Stack trace:
  at staticInitializer (source_locations/class/static_initializer/call.js:4:11)
  at <global> (source_locations/class/static_initializer/call.js:2:1)